src/test/deca/syntax/invalid/resultats/test44_attribute-synt.res
./src/test/deca/syntax/invalid/test44_attribute.deca:16:15: no viable alternative at input 'publicstringi'
